--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 asgiref==3.8.1
+beautifulsoup4==4.12.3
 Django==5.1
+django-bootstrap5==24.2
+django-livereload==1.7
+platformshconfig==2.4.0
+soupsieve==2.6
 sqlparse==0.5.1
-typing_extensions==4.12.2
+tornado==6.4.1
+tzdata==2024.1
